<resources>
    <string name="app_name">奶牛饲料配置系统</string>
    <string name="fodder_text">奶牛饲料养分</string>
    <string name="cow_text">奶牛营养指标</string>
    <string name="optimize_text">奶牛饲料优化</string>
    <string name="name_text">饲料名称</string>
    <string name="type_text">饲料类型</string>
    <string name="dry_matter_text">干物质(%)</string>
    <string name="crude_protein_text">可消化粗蛋白(g/kg)</string>
    <string name="energy_text">能量(NND/kg)</string>
    <string name="calcium_text">钙(g/kg)</string>
    <string name="phosphorus_text">磷(g/kg)</string>
    <string name="price_text">价格</string>
    <string name="variety_text">奶牛品种</string>
    <string name="weight_text">奶牛体重</string>
    <string name="weight_change_text">体重日变化</string>
    <string name="milk_production_text">产乳量(kg)</string>
    <string name="milk_fat_text">乳脂率(%)</string>
    <string name="milk_protein_text">乳真蛋白(%)</string>
    <string name="lactation_weeks_text">泌乳周</string>
    <string name="add_text">添加</string>
    <string name="submit_text">确认</string>
    <string name="change_text">修改</string>
    <string name="delete_text">删除</string>
    <string name="select_cow_text">点击选择奶牛营养指标</string>
    <string name="select_fodder_text">点击设置饲料</string>
    <string name="select_name_text">饲料\n名称</string>
    <string name="select_price_text">饲料\n价格</string>
    <string name="select_dosage_text">饲料\n用量</string>
    <string name="select_max_text">用量\n上限</string>
    <string name="select_min_text">用量\n下限</string>
    <string name="select_variable_text">是否\n可变</string>
    <string name="LP_text">开始计算</string>
    <string name="sodium_text">钠(g/kg)</string>
    <string name="chlorine_text">氯(g/kg)</string>
    <string name="potassium_text">钾(g/kg)</string>
    <string name="magnesium_text">镁(g/kg)</string>
    <string name="sulphur_text">硫(g/kg)</string>
    <string name="crude_fat_text">粗脂肪(g/kg)</string>
</resources>
