<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fx.cows_feeding_config.activity.MainActivity">

    <Button
        android:id="@+id/btn_fodder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/fodder_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_cow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/cow_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_optimize"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/optimize_text"
        android:textSize="20sp" />

</LinearLayout>
